Add Rect description

--- a/index.html
+++ b/index.html
@@ -276,15 +276,40 @@
 </div>
 
 <div id="Game1" class="w3-container game w3-animate-opacity">
-  <h2>Rect</h2>
-  <p></p>
   <div class="slideshow w3-content" style="max-width:800px;position:relative">
-
-  <img class="slide w3-animate-opacity" src="content\Rectv2.png" style="width:100%">
-
-  <a class="slideshow-button plus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;left:0;">❮</a>
-  <a class="slideshow-button minus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;right:0;">❯</a>
+    <img class="slide w3-animate-opacity" src="content\Rectv2.png" style="width:100%">
+    <img class="slide w3-animate-opacity" src="content\Rectv1.png" style="width:100%">
+    <a class="slideshow-button plus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;left:0;">❮</a>
+    <a class="slideshow-button minus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;right:0;">❯</a>
   </div>
+  <p>Rect is a local multiplayer game I've worked on in 2014. Each player plays as a rectangle (hence the name), the objective is to colour as much of the board as you can within the time limit.</p>
+  <p>
+    Yeah. Damn. 2014. This wasn't my first major-effort game (that was <a onclick="openGame(event, 'Game3')">Altair</a>), but this was the first where I wanted to take this game dev thing seriously. Which meant also doing all the things around game development, like dev diaries, trailers, media, etc.
+    This was mostly done on <a href="https://www.indiedb.com/games/rect" target="_blank">IndieDb</a>, a great game sharing site for independent games. Actually, it still has all my <a href="https://www.indiedb.com/games/rect/articles" target="_blank">diary entries</a> if you wish to see more of the development process.
+    It also paid off taking the things around it seriously. I remember when I've logged in one day to check my download statistics, I've seen this crazy spike. I couldn't belive it!
+    As it turns out, because of having a competent game profile, with pictures, regular releases and articles, I got featured on the IndieDb homepage. I think that was my proudest moment of game development to that point.
+  </p>
+  <p>
+    This was also the game I've submitted to the <19 freestyle programming competition.
+  </p>
+  <p>
+    Today, I've played it again, with my flatmate and my girlfriend. You know what, it's still a good game. I was genuinely surprised. I remember it being a loads of fun playing it with friends in highschool while I was working on it, but yeah, it still holds up. I can see some bugs, it's far from perfect, but it's a really solid little game.
+    You can download the final version from the link below. Be warned, the final version also has LAN multiplayer, but I have no idea if it still works. I couldn't get it working. But LAN was never the main focus.
+  </p>
+  <iframe width="560" height="180" src="https://www.indiedb.com/games/rect/downloads/rect-win/widget" frameborder="0" style="w3-container"></iframe><br><a href="https://www.indiedb.com/games/rect/downloads/rect-win">Download Rect (Win) - Indie DB</a>
+  <p>
+    Now in terms of actually loading it, I have some bad news. Given that it was 6 years ago, the Unity UI Engine and networking Engine that this was using was fully depricated.
+    If you're feeling brave, you can dowload an older version of Unity from the <a href="https://unity3d.com/get-unity/download/archive" target="_blank">Unity Archive</a>. I recommend something around 4.6.x.
+    In terms of source code, <a href="https://drive.google.com/drive/folders/104nvp7u6GudikAnZ_QEhx6dZo9gfAE89?usp=sharing" target="_blank">here you go</a>. Don't expect to see best practices. As I look back, I cringe at all the horrible solutions, but that's what 6 years of extra experience gives you I guess.
+  </p>
+  <p>
+    What is of worth learning from this game, is not really technical. I'd summarise it in these key takeaways:
+  </p>
+  <ul>
+    <li>Never underestimate the usefullness all the things surrounding game development. Write a journal. Do a vlog. Talk about your projects online, share it with others. I know often all you want to do is focus on the game and nothing else, and you're right, the main focus should be the game, but there is value in letting others in on the process.</li>
+    <li>Sometime a core gameplay loop is enough. Not always, but sometimes. This game doesn't really have depth. Yes there are game modes, and levels and sillyness, but this game can be boiled down to a solid 2 minute gameplay loop, that you play with some friends.</li>
+    <li>For this style of game, fun should be your only metric. When doing any change, ask yourself, does it allow me to have more fun. If yes, do it. This is not an excuse not to make a competent game, a buggy mess is no fun, but there is no point in polishing and adding depth, to a game where the point is the chaos and being angry at your friend who took the powerup from you again!</li>
+  </ul>
 </div>
 
 <div id="Game2" class="w3-container game w3-animate-opacity">
